syntax = "proto3";
import "google/protobuf/empty.proto";

package chat;

service ChatService {
  rpc SendMessage (MessageRequest) returns (google.protobuf.Empty);
  rpc GetMessages (google.protobuf.Empty) returns (stream MessageResponse);
}

message MessageRequest {
  string text = 1;
}

message MessageResponse {
  string sender_name = 1;
  string text = 2;
}
